[gd_scene load_steps=2 format=3 uid="uid://bw7thqdhujl41"]

[ext_resource type="Script" path="res://Scripts/SubComponents/Fields/MonologueLine.gd" id="1_toqtt"]

[node name="MonologueLine" type="MarginContainer"]
offset_right = 122.0
offset_bottom = 29.0
size_flags_horizontal = 3
script = ExtResource("1_toqtt")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FieldLabel" type="Label" parent="HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Label"

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HBox/VBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="WarnLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0.180392, 0.25098, 1)
text = "Warning"

[connection signal="focus_exited" from="HBox/VBox/LineEdit" to="." method="_on_focus_exited"]
[connection signal="text_changed" from="HBox/VBox/LineEdit" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="HBox/VBox/LineEdit" to="." method="_on_text_submitted"]
